src/Tests/Error/TypeStringError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class TypeStringError extends AssertError
{
}
